--- a/app/views/homepage/_dispatcher_schedule.html.erb
+++ b/app/views/homepage/_dispatcher_schedule.html.erb
@@ -1,36 +1,8 @@
-              <div class="table-responsive">
-                <table id="mytable" class="table table-bordred table-striped">
-                  <thead>
-                    <th><input type="checkbox" id="checkall" /></th>
-                    <th>Day</th>
-                    <th>Frequency</th>
-                    <th>Departure time</th>
-                    <th>From</th>
-                    <th>To</th>
-                    <th>Seats</th>
-                    <th>Dispatcher</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                  </thead>
-                  <tbody>
-                    <% @schedules.each do |schedule| %>
-                      <tr>
-                        <td><input type="checkbox" class="checkthis" /></td>
-                        <td><%= schedule["day_of_the_week"] %></td>
-                        <td><%= schedule["schedule_frequency"] %></td>
-                        <td><%= schedule["departure_time"] %></td>
-                        <td><%= schedule["from_city"] %></td>
-                        <td><%= schedule["to_city"] %></td>
-                        <td><%= schedule["available_seats"] %></td>
-                        <td><%= schedule["dispatcher_name"] %></td>
+<div id="dispatch_schedules"></div>
 
-                        <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                        <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
-                      </tr>
-                    <% end %>
-                  </tbody>
-                </table>
+<!-- Handlebar templates required by JS in this file --> 
+<%= render "dispatcher_schedule.hbr.html.erb" %>
 
-                <div class="clearfix">
-                </div>
-              </div> 
+<!-- Modal windows for edit/delete operations -->
+<%= render "dispatcher_delete_modal.html.erb" %>
+<%= render "dispatcher_edit_modal.html.erb" %>
