--- a/app/views/homepage/_passenger_booking.html.erb
+++ b/app/views/homepage/_passenger_booking.html.erb
@@ -29,5 +29,8 @@
     <button type="submit" class="btn btn-default">Search</button>
   </form>
 </div>
+
 <div id="booking_results">
 </div>
+<!-- Handlebar templates required by JS in this file --> 
+<%= render "passenger_booking_results.hbr.html.erb" %>
