--- a/app/views/homepage/_passenger_booking.html.erb
+++ b/app/views/homepage/_passenger_booking.html.erb
@@ -34,3 +34,6 @@
 </div>
 <!-- Handlebar templates required by JS in this file --> 
 <%= render "passenger_booking_results.hbr.html.erb" %>
+
+<!-- Modal windows for edit/delete operations -->
+<%= render "passenger_booking_modal.html.erb" %>
