--- a/app/views/homepage/_dispatcher_edit_modal.html.erb
+++ b/app/views/homepage/_dispatcher_edit_modal.html.erb
@@ -1,19 +1,29 @@
-<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+<div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-        <h4 class="modal-title custom_align" id="Heading">Delete this entry</h4>
+        <h4 class="modal-title custom_align" id="Heading">This feature is not implemented yet</h4>
       </div>
       <div class="modal-body">
-       
-      <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure you want to delete this Record?</div>
-       
-      </div>
+        <fieldset disabled>
+          <div class="form-group">
+            <input class="form-control " type="text" placeholder="Start City">
+          </div>
+          <div class="form-group">
+            <input class="form-control " type="text" placeholder="End City">
+          </div>
+          <div class="form-group">
+            <input class="form-control " type="text" placeholder="Seats">
+          </div>
+          <div class="form-group">
+            <textarea rows="2" class="form-control" placeholder="Dispatcher Name"></textarea>
+          </div>
+        </div>
         <div class="modal-footer ">
-        <button type="button" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Yes</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> No</button>
-      </div>
+          <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span>Create Schedule</button>
+        </div>
+      </fieldset>
     </div>
   </div>
 </div>
