--- a/app/views/homepage/_passenger_booking_results.hbr.html.erb
+++ b/app/views/homepage/_passenger_booking_results.hbr.html.erb
@@ -12,8 +12,7 @@
             <th>Time</th>
             <th>Seats</th>
             <th>Dispatcher</th>
-            <th>Edit</th>
-            <th>Delete</th>
+            <th>Book</th>
           </thead>
           <tbody>
             
@@ -29,8 +28,7 @@
                   <td>{{departure_time}}</td>
                   <td>{{available_seats}}</td>
                   <td>{{dispatcher_name}}</td>
-                  <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
-                  <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
+                  <td><p data-placement="top" data-toggle="tooltip" title="booking"><button class="btn btn-primary btn-xs" data-title="booking" data-toggle="modal" data-target="#booking" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
                 </tr>
                 {{/each}}
                 
